@@ -1,3 +1,7 @@
+Mon Feb 10 19:48:58 1997  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* Makefile.am: Add support for gnatmake -s
+
 Fri Feb  7 09:53:09 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>
 
 	* xe.ads: Add a new parameter File in Maybe_Most_Recent_Stamp to
